<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_neighbour_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <android.support.constraint.ConstraintLayout
            android:id="@+id/detail_neighbour_layout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >


    <TextView
        android:id="@+id/neighbourAvatar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:gravity="bottom|start|left"
        android:paddingLeft="10dp"
        android:paddingBottom="30dp"
        android:textAlignment="gravity"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:onClick="backToListNeighbourActivity"
        android:tint="#00FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/neighbourAvatar"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <ImageButton
        android:id="@+id/starButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:adjustViewBounds="false"
        android:background="@drawable/circle_button"
        android:cropToPadding="false"
        android:elevation="20dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_star_white_24dp"
        android:tint="@color/colorFavoriteUnselected"
        android:translationY="-15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/neighbourAvatar" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/neighbourAvatar"
        app:layout_constraintVertical_bias="0.076">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cardname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textColor="@color/colorPrimaryDark"
                android:background="?attr/editTextBackground"
                android:ems="10"
                android:textSize="24sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="50dp"
                tools:layout_editor_absoluteY="419dp">

                <ImageView
                    android:id="@+id/place"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="#00FFFFFF"
                    android:paddingStart="16dp"
                    android:tint="#E91E63"
                    app:srcCompat="@drawable/ic_perm_group_location" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:text="St Pierre du Mont à 5 kms"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="50dp"
                tools:layout_editor_absoluteY="419dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:paddingStart="16dp"
                    android:tint="#E91E63"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@drawable/ic_perm_group_phone_calls" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:gravity="center|left"
                    android:text="+33 6 86 57 90 14"
                    android:textSize="18sp"></TextView>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="50dp"
                tools:layout_editor_absoluteY="419dp">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:paddingStart="16dp"
                    android:tint="#E91E63"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@android:drawable/ic_menu_mapmode" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:gravity="center|left"
                    android:textSize="18sp"></TextView>


            </LinearLayout>


        </LinearLayout>


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/aboutme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/cardView">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cardname2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="?attr/editTextBackground"
                android:ems="10"
                android:text="About me"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:text="Bonjour ! Je souhaiterais faire de la marche nordique. Pas initiée, je recherche une ou plusieurs personnes susceptibles de m'accompagner ! J'aime les jeux de cartes tels la belote et le tarot..."
                android:textSize="18sp"></TextView>


        </LinearLayout>


    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>

    </ScrollView>


</android.support.constraint.ConstraintLayout>
